Correct alignment for iphone 12 Elements were noticeably out of line when viewed on iphone 12 sized devices.

--- a/src/components/ContactMe/ContactMe.module.css
+++ b/src/components/ContactMe/ContactMe.module.css
@@ -39,7 +39,7 @@ a {
 
 @media (max-width: 500px) {
   .container {
-    max-width: 333.5px;
+    max-width: 343px;
   }
   .emailText,
   .text {
